[tool.poetry]
name = "roadmap-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
alembic = "^1.11.3"
black = "^23.7.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
pytest = "^7.4.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "api",
]
asyncio_mode="auto"
