[tool.poetry]
name = "roadmap-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
alembic = "^1.11.3"
black = "^23.7.0"
isort = "^5.12.0"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
pytest = "^7.4.0"
sphinx-rtd-theme = "^1.3.0"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
pyjwt = "^2.8.0"
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.6"
anyio = "^4.0.0"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "api",
]
asyncio_mode="auto"
